feat!: Completed Sessions weekly entry page
Squashed commit of the following:

commit 7a919e466e3cace6317fd43482081eb764d0410f
Author: Sean A. Young <cname87@gmail.com>
Date:   Tue Sep 7 18:06:07 2021 +0100

    feat!: Completed Sessions weekly entry page

commit d0ef5604106819b50c3522698df9a2388761f5c5
Author: Sean A. Young <cname87@gmail.com>
Date:   Sun Sep 5 18:00:00 2021 +0100

    Draft 4

commit 5299e10fb88d240a9bca40c94be629f6648887c1
Author: Sean A. Young <cname87@gmail.com>
Date:   Sat Sep 4 20:45:19 2021 +0100

    Draft 3

commit 92a711ced8cc9c72b7991d00ed260e8c1dc1e445
Author: Sean A. Young <cname87@gmail.com>
Date:   Thu Sep 2 20:05:52 2021 +0100

    Draft 2

commit 23cf15d9cf6f731eac113283cd4d2896cc21bd33
Author: Sean A. Young <cname87@gmail.com>
Date:   Wed Sep 1 20:55:59 2021 +0100

    Add summary and sessions modules - first drafts
