# backend/api/openapi.json
@@ -1255,7 +1255,7 @@
           }
         ],
         "requestBody": {
-          "description": "A Javascipt Date object.",
+          "description": "A Javascript Date object.",
           "content": {
             "application/json": {
               "schema": {
@@ -1282,6 +1282,92 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/Scores"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "The request is not a valid request.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "503": {
+            "description": "The database service is not available now.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/members/{mid}/sessions2": {
+      "post": {
+        "summary": "Gets, or creates, a sessions table object.",
+        "description": "Gets, or creates, a sessions table object, as determined by the member id and the date in the query string.\n",
+        "operationId": "getOrCreateSessions",
+        "parameters": [
+          {
+            "name": "mid",
+            "in": "path",
+            "description": "The value of the id property of a member.",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "maximum": 999,
+              "minimum": 1,
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "A Javascript Date object.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Date"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Sessions table found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Sessions"
+                }
+              }
+            }
+          },
+          "201": {
+            "description": "Sessions table created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Sessions"
                 }
               }
             }
@@ -1358,6 +1444,76 @@
           },
           "404": {
             "description": "The scores table to update was not found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "503": {
+            "description": "The database service is not available now.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/sessions2": {
+      "put": {
+        "summary": "Updates a specific sessions table.",
+        "description": "A sessions object is supplied which must have a id corresponding to an existing sessions object.\nThe sessions table with that id is updated with the supplied sessions table.\n",
+        "operationId": "updateSessions",
+        "requestBody": {
+          "description": "Sessions object.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Sessions"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Sessions table updated.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Sessions"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "The request is not a valid request.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "The sessions table to update was not found.",
             "content": {
               "application/json": {
                 "schema": {
@@ -1699,6 +1855,39 @@
         },
         "description": "Questionaire information"
       },
+      "Sessions": {
+        "required": [
+          "date",
+          "id",
+          "memberId",
+          "sessions"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32",
+            "example": 5
+          },
+          "memberId": {
+            "maximum": 999,
+            "minimum": 1,
+            "type": "integer",
+            "format": "int32",
+            "example": 5
+          },
+          "date": {
+            "type": "string",
+            "format": "date"
+          },
+          "sessions": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Sessions-row"
+            }
+          }
+        }
+      },
       "Scores": {
         "required": [
           "date",
@@ -1727,12 +1916,31 @@
           "scores": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/Table-column"
+              "$ref": "#/components/schemas/Scores-row"
             }
           }
         }
       },
-      "Table-column": {
+      "Sessions-row": {
+        "type": "object",
+        "properties": {
+          "session-type": {
+            "type": "string",
+            "format": "binary"
+          },
+          "rpe": {
+            "type": "number",
+            "format": "int32",
+            "example": 5
+          },
+          "duration": {
+            "type": "number",
+            "format": "int32",
+            "example": 50
+          }
+        }
+      },
+      "Scores-row": {
         "type": "object",
         "properties": {
           "item": {
